--- a/WpfApp/Views/HomeView.xaml
+++ b/WpfApp/Views/HomeView.xaml
@@ -3,9 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:domain="clr-namespace:WpfApp.Domain"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    
+
+    <UserControl.DataContext>
+        <domain:HomeViewModel />
+    </UserControl.DataContext>
+
     <UserControl.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="HorizontalAlignment" Value="Center" />
@@ -31,9 +36,28 @@
     </UserControl.Resources>
     
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        
         <StackPanel VerticalAlignment="Center">
             <TextBlock Style="{StaticResource TitleText}" Name="textblock1">My WPF Application</TextBlock>
             <TextBlock>Just a simple demo</TextBlock>
+        </StackPanel>
+        <StackPanel Grid.Row="1" VerticalAlignment="Center">
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Label>WindowsIdentityUserName:</Label>
+                <TextBlock Text="{Binding WindowsIdentityUserName}" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Label>UserPrincipalDisplayName:</Label>
+                <TextBlock Text="{Binding UserPrincipalDisplayName}" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Label>UserFolder:</Label>
+                <TextBlock Text="{Binding UserFolder}" />
+            </StackPanel>
         </StackPanel>
     </Grid>
 </UserControl>
