--- a/WpfApp/Views/ExternalProgramCaller.xaml
+++ b/WpfApp/Views/ExternalProgramCaller.xaml
@@ -3,13 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:domain="clr-namespace:WpfApp.Domain"
+             xmlns:vm="clr-namespace:WpfApp.ViewModels"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
 
     <UserControl.DataContext>
-        <domain:ExternalCallerViewModel />
+        <vm:ExternalCallerViewModel />
     </UserControl.DataContext>
     
     <Grid>
