--- a/WpfApp/Views/MainWindow.xaml
+++ b/WpfApp/Views/MainWindow.xaml
@@ -3,14 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:domain="clr-namespace:WpfApp.Domain"
+        xmlns:vm="clr-namespace:WpfApp.ViewModels"
         mc:Ignorable="d"
         Title="{Binding MainWindowTitle}"
         Height="450"
         Width="800">
     
     <Window.DataContext>
-        <domain:MainViewModel />
+        <vm:MainViewModel />
     </Window.DataContext>
 
     <Window.Resources>
